--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello My name is Gaurav</h1>
+    <h1>Hello My name is Divya</h1>
 </body>
 </html>
